# remotegl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cube/: CMakeLists.txt  main.c  renderer.c  renderer.h
examples/cube/util/: esUtil.h  timespec.c  timespec.h
examples/server/: CMakeLists.txt  server.cpp
include/remotegl/: remotegl-client.h  remotegl-server.hpp  remotegl-types.h  remotegl.h
src/remotegl/: identity.hpp  remotegl-client-fake.cpp  remotegl-client.cpp  remotegl-protocol.hpp  remotegl-server.cpp  signature.hpp  size_hints.hpp  standard_layout_tuple.hpp
